--- a/css/common.css
+++ b/css/common.css
@@ -3980,9 +3980,14 @@ tbody .selectedcountry td {
     font-weight: bold;
 }
 
+table.js-sort-table.js-sort-asc thead tr>.js-sort-active:not(.js-sort-none)::after,
+table.js-sort-table.js-sort-desc thead tr>.js-sort-active:not(.js-sort-none)::after {
+    padding-left: 0 !important;
+}
 
-
-
+#sortable thead th:last-child:after {
+    display: none !important;
+}
 
 
 
